--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "json-server": "^0.16.2",
+    "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -15,13 +17,17 @@
     "react-scripts": "^3.4.4",
     "redux": "^4.0.5",
     "redux-immutable-state-invariant": "^2.1.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p start:dev start:mockapi",
+    "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prestart:mockapi": "node mockapi/createMockDb.js",
+    "start:mockapi": "node mockapi/apiServer.js"
   },
   "eslintConfig": {
     "extends": "react-app"
