--- a/package.json
+++ b/package.json
@@ -3,31 +3,50 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "fetch-mock": "^9.10.7",
     "json-server": "^0.16.2",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.9.6",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "redux": "^4.0.5",
     "redux-immutable-state-invariant": "^2.1.0",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "run-p start:dev start:mockapi",
     "start:dev": "react-scripts start",
+    "prebuild": "run-p test:ci",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:ci": "react-scripts test",
     "eject": "react-scripts eject",
     "prestart:mockapi": "node mockapi/createMockDb.js",
     "start:mockapi": "node mockapi/apiServer.js"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/index.js"
+    ],
+    "coverageReporters": [
+      "text"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,5 +62,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
+    "node-fetch": "^2.6.1"
   }
 }
