--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-sudo: false
+os: linux
+
+dist: debian
 
 notifications:
   email: false
@@ -6,4 +8,11 @@ notifications:
 language: node_js
 
 node_js:
-  - node
+  - 12.18.3
+
+script:
+  - npm run test
+
+branches:
+  only:
+    - master
